# rust-crud-sql-api

./: .env  .env.dev  .env.prod  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh
db/: initial.sql
src/: main.rs
src/articles/: handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs
src/environment/: argon.rs  mod.rs
src/error/: handlers.rs  mod.rs
src/users/: handlers.rs  models.rs  routes.rs  service.rs
