[package]
name = "rust-crud-sql"
version = "0.1.0"
authors = ["Leonardo Devai <leonardo@devai.io>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
dotenv = "0.15.0"
clap = "3.0.0-beta.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
jsonwebtoken = "7.2.0"
argonautica = "0.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
anyhow = "1.0.36"
thiserror = "1.0.22"
sqlx = { version = "0.4.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "json", "offline"] }

[[bin]]
name = "rust-crud-sql"
path = "src/main.rs"
